# Aurelia-Aurita

./: .gitignore  CMakeLists.txt  LICENCE  main.cpp  readme.md
.github/workflows/: cmake.yml
config/: BiophyiscalConstants.h
spinal_hdl/: aurelia_constraints.xdc  build.sbt
spinal_hdl/src/main/scala/aurelia/: ActiveStressUnit.scala  AureliaAccelerator.scala  AureliaTypes.scala  AxionFieldUnit.scala  ChemicalPotential.scala  ChernConnectionEngine.scala  LaplacianOrder4Unit.scala  LineBufferUnits.scala  MathUtils.scala  MatrixInverse.scala  RicciFlowEngine.scala  RicciScalarUnit.scala  RicciTensorCore.scala  StencilBuffer5Point.scala  WLCStressCore.scala  ZeroSkippingScheduler.scala
spinal_hdl/src/test/scala/aurelia/: AureliaVerification.scala  SimRicciFlow.scala  ZeroSkippingTest.scala
src/: main.cpp
src/ActiveMatter/Morphogenesis/: RicciFlow.h  Symmetrization.h
src/ActiveMatter/Thermodynamics/: ChemicalPotential.h  NonEquilibrium.h
src/FieldTheory/Electrodynamics/: AxionField.h  ConstitutiveMap.h  PreMetricMaxwell.h  SkewonField.h
src/FieldTheory/Lagrangian/: ActionFunctional.h  EulerLagrange.h
src/Fondation/Calculus/: NumericalDiff.h
src/Fondation/LinearAlgebra/: ComplexMath.h  Eigensolver.h  Matrix.h  Vector.h
src/Foundation/Calculus/: Integration.h  NumericalDiff.h  StencilCache.h
src/Foundation/LinearAlgebra/: ComplexMath.h  DynamicVector.h  Matrix.h  Tensor4.h  Vector.h
src/Geometry/Connection/: ChernConnection.h  CovariantDeriv.h
src/Geometry/Invariants/: FlagCurvature.h  GeodesicFlow.h
src/Geometry/Manifold/: CartanTorsion.h  MetricTensor.h  SlitTangentBundle.h
src/Inversion/: CostFunction.h
src/Inversion/RiemannianOpt/: AdjointState.h  ManifoldNewtonCG.h  ParallelTrans.h
src/StatisticalMech/Microstructure/: Crystallography.h  ODF.h
src/StatisticalMech/Polymer/: EntropyMap.h  WormLikeChain.h
src/Theoritical/Biophysics/: ProximalRicciObjective.h  QuantumMetricAnsatz.h
src/Theoritical/QuantumOptimization/Manifold/: CircuitGraph.h  PauliAlgebra.h
src/Theoritical/QuantumOptimization/Sampling/: StaticEnvelope.h
src/Theoritical/QuantumOptimization/Solvers/: CubicNewton.h  LanczosSolver.h
src/Utils/: DataIO.h  Visualization.h
src/crypto/: ApproximationGap.h  ArithmeticGeometricDissonance.h  InvariantGap.h  RepresentationGap.h
src/crypto/Approximation/: ApproximationBound.h  Manifold.h  PolynomialSolver.h
src/crypto/Approximation/Theory/: LebesgueConstant.h  RemezSolver.h
src/crypto/Invariant/: BettiTable.h  Distinguisher.h  SyzygyBasis.h
src/crypto/Invariant/HomologicalAlgebra/: FreeResolution.h  Ideal.h  PolynomialRing.h  TorFunctor.h
src/crypto/Representation/: ArithmeticRing.h  BooleanGadget.h  ConversionBottleneck.h
src/crypto/Representation/Microarchitecture/: LeakageSimulator.h
src/crypto/Representation/Security/: ProbabilisticModel.h
writing/: FPGA.tex  crypto.tex  manuscript.tex  quantum.tex
